Fix #8 undefined toList() method